syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.franklin";

package customer;

message Customer {
    int64 id = 1; 
    string name = 2; 
    string email = 3; 
    float balance = 4; 
    float price = 5;
}

service CustomerService { 
    rpc GetRandomCustomer (GetRandomCustomerRequest) returns (Customer) {}
    rpc UpdateCustomer (Customer) returns (UpdateCustomerResponse) {}
}

message GetRandomCustomerRequest {
    int64 id = 1;
}


message UpdateCustomerResponse {
    bool success = 1; 
}

